# vectordb

./: pyproject.toml
vectordb/db/: faiss.py  milvus.py  qdrant.py  vector_db.py
vectordb/scripts/: data_loader.ipynb  faiss.ipynb  milvus.ipynb  qdrant.ipynb
